Added more project info

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
    			<p>Before becoming a U.S. Citizen and living in the States for years, I lived in amazing places that are Abu Dhabi, UAE, and Vadodara, India.
 				I have worked in many different environments and I constantly strive to improve myself.
 			   </p>
-
+			<p>Currently, I am looking to start my software engineering career with an entry-level SWE position that teaches me, excites me, and motivates me to work harder for myself, my colleagues, and the company.</p>
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
@@ -137,7 +137,18 @@
    					<strong>Email:</strong>
    					<span>ujaineel@gmail.com</span>
    				</li>
-
+				<li>
+					<strong>Phone:</strong>
+					<span><a href="tel:240-481-2669" target="_blank">+1(240)481-2669</a></span>
+				</li>
+				<li>
+					<strong>University:</strong>
+					<span><a href="https://www.umbc.edu/" target="_blank">University of Maryland - Baltimore County (UMBC)</a></span>
+				</li>
+				<li>
+					<strong>Degree & Major:</strong>
+					<span>Bachelor of Science, Computer Science</span>
+				</li>
    			</ul> <!-- /info-list -->
 
    		</div>
@@ -145,20 +156,19 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>As a student and passionate learner of new technologies, I have gained good exposure and experience in various programming languages such as C, C++, Java, and Python. I also have some exposure with full-stack development. I also have a considerable interest in Machine Learning.
-			   </p>
-
+   			<p>As a student and passionate learner of new technologies, I have gained good exposure in various programming languages such as C, C++, Java, and Python. I also have some exposure with full-stack development. I also have a considerable interest in Machine Learning.</p>
+			<p>Programming Languages. Check my CV for other languages/skills/info.</p>
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
 				   	<strong>C/C++</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent75"><span>75%</span></div>
+				   	<div class="progress percent70"><span>70%</span></div>
 				   	<strong>Python</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent60"><span>60%</span></div>
+				   	<div class="progress percent65"><span>65%</span></div>
 				   	<strong>Java</strong>
 				   </li>
 				   <li>
@@ -173,10 +183,6 @@
 				   	<div class="progress percent65"><span>65%</span></div>
 				   	<strong>JavaScript</strong>
 				   </li>
-				   <li>
-					<div class="progress percent65"><span>65%</span></div>
-					<strong>TensorFlow</strong>
-					</li>
 				</ul> <!-- /skill-bars -->		
 
    		</div>
@@ -394,7 +400,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.png" alt="Shutterbug">
+	               	<img src="images/portfolio/shutterbug.png" alt="Discord Scheduler">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -410,13 +416,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/portfolio/clouds.png"alt="Linux IPC">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Linux Kernel IPC Mechanism</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  C, Linux Kernel
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -426,13 +432,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
+	               	<img src="images/portfolio/beetle.jpg" alt="ASL">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">American Sign Language Recognition & Translation</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Python, TensorFlow, Machine Learning
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
@@ -446,9 +452,9 @@
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Parallel N-Body Gravitational Simulations</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  Parallelism, OpenMP, C++
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -501,10 +507,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Discord Assignment Scheduler (WIP)</h4>		      
+					      <h4>Discord Assignment Scheduler</h4>		      
 					      <p>This web application allows Discord users to store assignments and tasks to complete, or "schedule". Node.JS is the server environment and Heroku is the platform on which the web application is deployed. MongoDB is the storage platform.</p>
 						  <p>Through this project, I improved my programming skills on HTML, CSS, JavaScript, and got exposure to some back-end development</p>
-						  <p>Currently, recreating back-end API for the application.</p>
+						  <p>Currently, recreating back-end for the web app.</p>
 					      <div class="categories">Web Application Development</div>			               
 					   </div>
 
@@ -522,14 +528,15 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-					      <div class="categories">Web Design</div>			               
+					      <h4>Linux Interprocess Communication System</h4>		      
+					      <p>This project involves development of inter-process communicating system calls. What these system calls do, is allow processes/threads to communicate with each other through indirect communication with kernel mailbox objects. A process can send a message into the mailbox while the other process can receive and read the message. It is synchronized as to avoid race conditions or any other data corruption/manipulation.</p>
+						  <p>Debugging logical errors in kernel-space development was the most difficult challenge I encountered. It was extremely difficult to identify logical or memory errors when working with kernel code, especially with system calls.</p>
+						  <p>I like this project as I learned how Linux system calls work behind the scene and how to write them.</p>
+					      <div class="categories">Linux Development With C</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/ujaineel/IPC-Kernel-Calls" target="_blank">Check out the source!</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -542,14 +549,15 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Beetle</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
+					      <h4>ASL Recognition</h4>		      
+						  <p>Whilst watching a YouTube video without any provided subtitles, I realized that while I can understand and infer what is said due to the language and sound, if I had to ever encounter someone who relied on the American Sign Language, then that would make communication difficult. Hence, my inspiration to attempt this project.</p>
+						  <p>I utilized the TensorFlow library for its implementation of Neural Network and created a Convolutional Neural Network by using the Convolutional and Pooling layers along with hidden Dense layers and Batch Normalization. The training and testing datasets for the model were created from ASL image data from Kaggle. An attempt is made to translate basic ASL letters and few gestures by video capturing through OpenCV and sending the frames as input for the model prediction.</p>
+						  <p>Currently, converting image recognition to object detection with conversion from CNN to YOLO.</p>
 					      <div class="categories">Branding</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/ujaineel/ASL_proj">Check out the source code!</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -562,14 +570,14 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-					      <div class="categories">Web Development</div>			               
+					      <h4>N-Body Gravitational Simulation</h4>		      
+					      <p>N-Body Gravitational Simulation that is parallelized with the use of OpenMP library in C++.</p>
+						  <p>This involves collecting coordinates of each body then creating an image/frame with the bodies at the respective locations. These frames are smashed together to create a gif showing the movements of the bodies.</p>
+					      <div class="categories">Parallelism, OpenMP, C++</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/ujaineel/Multithreading-Gravitational-N-Body">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -618,7 +626,7 @@
 
    			<h1>Coding Challenges</h1>
 
-   			<p class="lead">Some of the coding challenges that I liked and solved.</p>
+   			<p class="lead">Some of the coding challenges that I liked and solved. WIP</p>
 
    		</div>   		
    	</div> <!-- /section-intro -->
@@ -847,7 +855,7 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Please email me with any questions or just to chat. Chat me up on LinkedIn, if email not possible.</p>
 
    		</div> 
    	</div> <!-- /section-intro -->
