Added required projects and links. Only Coding Challenge Left

--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
    				</li>
 				<li>
 					<strong>Phone:</strong>
-					<span><a href="tel:240-481-2669" target="_blank">+1(240)481-2669</a></span>
+					<span><a href="tel:240-481-2669" target="_blank"><u>+1(240)481-2669</u></a></span>
 				</li>
 				<li>
 					<strong>University:</strong>
-					<span><a href="https://www.umbc.edu/" target="_blank">University of Maryland - Baltimore County (UMBC)</a></span>
+					<span><a href="https://www.umbc.edu/" target="_blank"><u>University of Maryland - Baltimore County (UMBC)</u></a></span>
 				</li>
 				<li>
 					<strong>Degree & Major:</strong>
@@ -468,9 +468,9 @@
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">Maze Solver</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  C++
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
@@ -590,10 +590,12 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Maze Solver</h4>		      
+					      <p>Solving Mazes Using A Stack Structure.</p>
 
-					      <div class="categories">Branding</div>			               
+						   <p>This program uses a text file with an encoded maze input text that is used to find a path from cell 0 to cell N-1, with the invalid/walls labelled -1. The Solving algorithm uses a Stack Data Structure to find the path and traverse through the maze.</p>
+
+					      <div class="categories">C++, Stack Data Structure</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -611,8 +613,9 @@
 
    		</div>  <!-- /twelve -->   
 
+	<p> Check out other projects at <a href="https://github.com/ujaineel" target="_blank"><u>GitHub</u></a></p>
    	</div> <!-- /portfolio-content --> 
-		
+	
 	</section> <!-- /portfolio --> 
 
 	<!-- services Section
