--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
    		<div class="col-twelve">
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
+            <form action="https://formspree.io/f/mdoylwbw" method="post">
       			<fieldset>
 
                   <div class="form-field">
