Hopefully email works

--- a/index.html
+++ b/index.html
@@ -868,17 +868,18 @@
    		<div class="col-twelve">
 
             <!-- form -->
-            <form action="https://formspree.io/f/mdoylwbw" method="post">
+            <form name="contactForm" id="contactForm" method="post">
       			<fieldset>
 
                   <div class="form-field">
  						   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
                   </div>
                   <div class="form-field">
-	      			   <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
+	      			   <input pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" name="_replyto" type="email" id="contactEmail" placeholder="Email" value="" required="">
 	               </div>
                   <div class="form-field">
 	     				   <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
+						   <input type="text" name="_gotcha" style="display:none" />
 	               </div>                       
                   <div class="form-field">
 	                 	<textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
