Hopefully email works now

--- a/index.html
+++ b/index.html
@@ -859,7 +859,7 @@
    			<h1>I'd Love To Hear From You.</h1>
 
    			<p class="lead">Please email me with any questions or just to chat. Chat me up on LinkedIn, if email not possible.</p>
-
+			<small>Form powered by Formspree</small>
    		</div> 
    	</div> <!-- /section-intro -->
 
@@ -868,7 +868,7 @@
    		<div class="col-twelve">
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post">
+            <form name="contactForm" id="contactForm" method="post" target="_blank">
       			<fieldset>
 
                   <div class="form-field">
