--- a/index.html
+++ b/index.html
@@ -605,16 +605,7 @@
 
 				   </div> <!-- /modal-06 -->
 
-				   <!-- Coding Challenge Modal Popups-->
 
- 				   <div id="modal-c01" class="popup-modal slider mfp-hide">
-					 	
-					 <div data-pym-src="https://www.jdoodle.com/iembed/v0/fja"></div>
-			         <div class="link-box">
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
-
-				   </div> <!-- /modal-06 -->
 				   <!-- modal popups - end
 	            ============================================================= -->
 
@@ -649,22 +640,13 @@
 
 	      	<div class="service">	
 
-				<div class="bgrid folio-item">
-					<div class="item-wrap">
-						<a href="#modal-c01" class="overlay">
-							<div class="folio-item-table">
-								<div class="folio-item-cell">
-									<h3 class="folio-title">Kth element of a sorted matrix</h3>	     					    
-											<span class="folio-types">
-										</span>		     		
-									</div>	                      	
-							</div>                    
-						</a>
-					</div>
-				</div>
+	            <div class="service-content">	
 
+	            	<a href="https://www.jdoodle.com/ia/fja" target="_blank"><u><h3>Kth Element of a Sorted Matrix</h3></u></a>
+	         		
+	         	</div> 	         	 
 
-			</div> <!-- /service -->
+				</div> <!-- /service -->
 
 				<div class="service">	
 
@@ -992,7 +974,6 @@
    <script src="js/jquery-2.1.3.min.js"></script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>
-   <script src=”https://www.jdoodle.com/assets/jdoodle-pym.min.js” type=”text/javascript”></script>
 
 </body>
 
