Removed text. Refer to previous commit msg

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
    			<h3>Skills</h3>
    			<p>As a student and passionate learner of new technologies, I have gained good exposure in various programming languages such as C, C++, Java, and Python. I also have some exposure with full-stack development. I also have a considerable interest in Machine Learning.</p>
-			<p>Programming Languages. Check my CV for other languages/skills/info.</p>
+			<p>Programming Languages. Check my CV for other skills.</p>
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
