--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/anim.gif" alt="Lighthouse">
+	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -566,7 +566,7 @@
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/lighthouse.jpg" alt="" />
+				     		<img src="images/portfolio/modals/anim.gif" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
