--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 					      <h4>ASL Recognition</h4>		      
 						  <p>Whilst watching a YouTube video without any provided subtitles, I realized that while I can understand and infer what is said due to the language and sound, if I had to ever encounter someone who relied on the American Sign Language, then that would make communication difficult. Hence, my inspiration to attempt this project.</p>
 						  <p>I utilized the TensorFlow library for its implementation of Neural Network and created a Convolutional Neural Network by using the Convolutional and Pooling layers along with hidden Dense layers and Batch Normalization. The training and testing datasets for the model were created from ASL image data from Kaggle. An attempt is made to translate basic ASL letters and few gestures by video capturing through OpenCV and sending the frames as input for the model prediction.</p>
-						  <p>Currently, converting image recognition to object detection with conversion from CNN to R-CNN.</p>
+						  <p>Currently, converting image recognition to object detection with conversion from CNN to YOLO.</p>
 					      <div class="categories">Branding</div>			               
 					   </div>
 
