--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+				     		<img src="images/portfolio/Discord Task Scheduler.gif" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
