Removed ASL Project

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 	                  </a>
 	               </div>
 	        		</div> <!-- /folio-item -->
-
+				<!--
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/beetle.jpg" alt="ASL">
@@ -438,8 +438,7 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->     
-
+	        		</div>  /folio-item -->     
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
