New Project Inclusion - JuKu

--- a/index.html
+++ b/index.html
@@ -439,6 +439,22 @@
 	                  </a>
 	               </div>
 	        		</div>  /folio-item -->     
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/juku.jpg" alt="ASL">
+						   <a href="#modal-04" class="overlay">                  	                 
+							  <div class="folio-item-table">
+								  <div class="folio-item-cell">
+									  <h3 class="folio-title">Online Store Of JuKu (WIP)</h3>	     					    
+											  <span class="folio-types">
+												   React.JS, FireBase, Stripe API, JS, CSS
+											</span>		     		
+										 </div>  	                      	
+							  </div>                    
+						   </a>
+						</div>
+						 </div>
+
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
@@ -535,7 +551,7 @@
 
 				   </div> <!-- /modal-03 -->
 
-				   <div id="modal-04" class="popup-modal slider mfp-hide">	
+				   <!--<div id="modal-04" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-beetle.jpg" alt="" />
@@ -554,8 +570,35 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-04 -->
+				   </div>--> <!-- /modal-04 -->
 
+					<div id="modal-04" class="popup-modal slider mfp-hide">	
+
+						<div class="media">
+							<img src="images/portfolio/modals/m-juku.jpg" alt="" />
+						</div>      	
+
+						<div class="description-box">
+							<h4>Store of JuKu</h4>		      
+							<p>Learn continually - there's always "one more thing" to learn.</p><br>
+							<p>I have always wanted to work on new technologies, learn and improve my skillset. One could do it by taking different, interesting courses. However, most important approach out of any approach, is self-learning.
+								Therefore, I undertake projects and challenges, regardless of their complexity or scale or size. And one such project I worked on is this online store, named JuKu. It's not a real store, but I hope it feels like 
+								one to you.
+							</p>
+							<p>I wanted to utilize a front-end framework for this project, and what better than React.JS, one of the best front-end frameworks available. I also used Firebase for back-end and database. 
+								I could have used MongoDB, but Firebase was something I hadn't developed with/in before. Plus the real-time updates, auth management, automatic scaling, etc. were some features I was drawn to.
+							</p>
+							<p>Will be deployed soon after work is completed.</p>
+							<div class="categories">React.JS, JS, FireBase, API (Stripe)</div>			               
+						</div>
+
+						<div class="link-box">
+						<!--<a href="https://github.com/ujaineel/ASL_proj">Check out the source code!</a>-->
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>		      
+						
+			  		</div>
+				   
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
@@ -585,7 +628,7 @@
 					   <div class="description-box">
 					      <h4>Maze Solver</h4>		      
 					      <p>Solving Mazes Using A Stack Structure.</p>
-
+						   <p>Many focus on building complex projects, or have confusing design. Some don't understand the most basic of the basic data structures. Having a basic project like this is vital since complexities rise from basic foundations, and if basic foundatiosn are strong, then the complexities will soon be gone.</p>
 						   <p>This program uses a text file with an encoded maze input text that is used to find a path from cell 0 to cell N-1, with the invalid/walls labelled -1. The Solving algorithm uses a Stack Data Structure to find the path and traverse through the maze.</p>
 
 					      <div class="categories">C++, Stack Data Structure</div>			               
