Image not showing for JuKu

--- a/index.html
+++ b/index.html
@@ -441,19 +441,19 @@
 	        		</div>  /folio-item -->     
 					<div class="bgrid folio-item">
 						<div class="item-wrap">
-							<img src="images/portfolio/juku.jpg" alt="ASL">
+							<img src="images/portfolio/juku.jpg" alt="JuKu">
 						   <a href="#modal-04" class="overlay">                  	                 
 							  <div class="folio-item-table">
 								  <div class="folio-item-cell">
 									  <h3 class="folio-title">Online Store Of JuKu (WIP)</h3>	     					    
-											  <span class="folio-types">
-												   React.JS, FireBase, Stripe API, JS, CSS
+											<span class="folio-types">
+												React.JS, FireBase, Stripe API, JS, CSS
 											</span>		     		
-										 </div>  	                      	
+									</div>  	                      	
 							  </div>                    
 						   </a>
 						</div>
-						 </div>
+					</div>
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
