--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/Discord Task Scheduler.gif" alt="" />
+				     		<video src="images/portfolio/Discord Task Scheduler.mp4" autoplay muted loop alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -575,25 +575,24 @@
 					<div id="modal-04" class="popup-modal slider mfp-hide">	
 
 						<div class="media">
-							<img src="images/portfolio/modals/juku.jpg" alt="" />
+							<img src="images/portfolio/juku.jpg" alt="" />
 						</div>      	
 
 						<div class="description-box">
 							<h4>Store of JuKu</h4>		      
 							<p>Learn continually - there's always "one more thing" to learn.</p><br>
 							<p>I have always wanted to work on new technologies, learn and improve my skillset. One could do it by taking different, interesting courses. However, most important approach out of any approach, is self-learning.
-								Therefore, I undertake projects and challenges, regardless of their complexity or scale or size. And one such project I worked on is this online store, named JuKu. It's not a real store, but I hope it feels like 
-								one to you.
+								Therefore, I undertake projects and challenges, regardless of their complexity or scale or size. And one such project I worked on is this online store, named JuKu.
 							</p>
 							<p>I wanted to utilize a front-end framework for this project, and what better than React.JS, one of the best front-end frameworks available. I also used Firebase for back-end and database. 
 								I could have used MongoDB, but Firebase was something I hadn't developed with/in before. Plus the real-time updates, auth management, automatic scaling, etc. were some features I was drawn to.
 							</p>
-							<p>Will be deployed soon after work is completed.</p>
+							<p>Still work in progress and requires substantial developments.</p>
 							<div class="categories">React.JS, JS, FireBase, API (Stripe)</div>			               
 						</div>
 
 						<div class="link-box">
-						<!--<a href="https://github.com/ujaineel/ASL_proj">Check out the source code!</a>-->
+						<a href="https://clone-app-956fb.web.app/" target="_blank">Check out some of it!</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>		      
 						
@@ -613,7 +612,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/ujaineel/Multithreading-Gravitational-N-Body">Details</a>
+			            <a href="https://github.com/ujaineel/Multithreading-Gravitational-N-Body" target="_blank">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
