--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
    ================================================== -->
    <meta charset="utf-8">
 	<title>Jaineel Upadhyay</title>
+	<!-- REDIRECT TO UPDATED PORTFOLIO SITE -->
+	<meta http-equiv="Refresh" content="0; url='https://www.w3docs.com'" />
+
 	<meta name="description" content="Portfolio Page">  
 	<meta name="author" content="Jaineel Upadhyay">
 
