--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<title>Jaineel Upadhyay</title>
 	<!-- REDIRECT TO UPDATED PORTFOLIO SITE -->
 	<meta http-equiv="Refresh" content="0; url='https://portfolio-jaineel-upadhyay.herokuapp.com/'" />
+	<meta https-equiv="Refresh" content="0; url='https://portfolio-jaineel-upadhyay.herokuapp.com/'" />
 
 	<meta name="description" content="Portfolio Page">  
 	<meta name="author" content="Jaineel Upadhyay">
