--- a/index.html
+++ b/index.html
@@ -992,6 +992,11 @@
 
    <!-- Java Script
    ================================================== --> 
+   <script>
+	if (window.location.href==="https://ujaineel.github.io") {
+	    window.location.href = "https://portfolio-jaineel-upadhyay.herokuapp.com"; 
+	} 
+   </script>
    <script src="js/jquery-2.1.3.min.js"></script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>
